--- a/app/views/admin/customer/edit.html.erb
+++ b/app/views/admin/customer/edit.html.erb
@@ -1,25 +1,34 @@
-<h3>Modification des informations de <i><%=@customer.names%></i></h3>
+<h2>Modifier agent: <%=@customer.names%></h2>
 <%= form_for @customer, :url=>{:action=>'update', :id=>@customer} do |cust|%>
-
+<% if @customer.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@customer.errors.size, " erreur")%>, enregistrement echoué</h3>
+      <ul>
+        <% for message in @customer.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td><label for="customer_names">Noms :</label></td><td><%=text_field 'customer','names'%></td>
+		<td><label for="customer_names">Noms</label></td><td><%=text_field 'customer','names'%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="customer_service">Service :</label></td>
+		<td><label for="customer_service">Service </label></td>
 		<td><%= collection_select(:customer, :department_id, @departments, :id, :description)%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="customer_telephone">Téléphone :</label></td><td><%=text_field 'customer','telephone'%></td>
+		<td><label for="customer_telephone">Téléphone</label></td><td><%=text_field 'customer','telephone'%></td>
 	</tr>
 	<tr>
-		<td><label for="customer_email">E-mail :</label></td><td><%=text_field 'customer','email'%></td>
+		<td><label for="customer_email">E-mail</label></td><td><%=text_field 'customer','email'%></td>
 	</tr>
 	<tr>
-		<td><%=submit_tag "Update"%></td>
+		<td></td><td><%=submit_tag "Mettre à jour", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', admin_customer_index_path(),class:'link'%>
