--- a/app/views/admin/item/edit.html.erb
+++ b/app/views/admin/item/edit.html.erb
@@ -1,25 +1,34 @@
-<h3>Modification de l'article: <i><%=@item.name%></i></h3>
+<h2>Modifier article: <%=@item.name%></h2>
 <%= form_for @item, :url=>{:action=>'update', :id=>@item} do |prov|%>
-
+<% if @item.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@item.errors.size, " erreur")%>, enregistrement echoué</h3>
+      <ul>
+        <% for message in @item.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td><label for="item_name">Nom</label></td><td>: <%=text_field 'item','name'%></td>
+		<td><label for="item_name">Nom</label></td><td><%=text_field 'item','name'%></td>
 	</tr>
 	
 	<tr>
 		<td><label for="item_detail">Description</label></td>
-		<td>: <%=text_field 'item', 'detail'%></td>
+		<td><%=text_field 'item', 'detail'%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="item_stock">Quantité en stock</label></td><td>: <%=text_field 'item','stock'%></td>
+		<td><label for="item_stock">Quantité en stock</label></td><td> <%=text_field 'item','stock'%></td>
 	</tr>
 	<tr>
-		<td><label for="item_unit">Unité de mesure</label></td><td>: <%=text_field 'item','unit'%></td>
+		<td><label for="item_unit">Unité de mesure</label></td><td><%=text_field 'item','unit'%></td>
 	</tr>
 	<tr>
-		<td><%=submit_tag "Update"%></td>
+		<td></td><td><%=submit_tag "Mettre à jour", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', admin_item_index_path(), class:'link'%>
