--- a/app/views/admin/provider/edit.html.erb
+++ b/app/views/admin/provider/edit.html.erb
@@ -1,25 +1,34 @@
-<h3>Modification du fournisseur: <i><%=@provider.names%></i></h3>
+<h2>Modifier fournisseur: <%=@provider.names%></h2>
 <%= form_for @provider, :url=>{:action=>'update', :id=>@provider} do |prov|%>
-
+<% if @provider.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@provider.errors.size, " erreur")%>, enregistrement echoué</h3>
+      <ul>
+        <% for message in @provider.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td><label for="provider_names">Noms</label></td><td>: <%=text_field 'provider','names'%></td>
+		<td><label for="provider_names">Noms</label></td><td><%=text_field 'provider','names'%></td>
 	</tr>
 	
 	<tr>
 		<td><label for="provider_town">Ville</label></td>
-		<td>: <%=text_field 'provider', 'town'%></td>
+		<td><%=text_field 'provider', 'town'%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="provider_telephone">Téléphone</label></td><td>: <%=text_field 'provider','telephone'%></td>
+		<td><label for="provider_telephone">Téléphone</label></td><td><%=text_field 'provider','telephone'%></td>
 	</tr>
 	<tr>
-		<td><label for="provider_email">E-mail</label></td><td>: <%=text_field 'provider','email'%></td>
+		<td><label for="provider_email">E-mail</label></td><td><%=text_field 'provider','email'%></td>
 	</tr>
 	<tr>
-		<td><%=submit_tag "Update"%></td>
+		<td></td><td><%=submit_tag "Mettre à jour", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', admin_provider_index_path, class:'link'%>
