--- a/app/views/admin/provider/new.html.erb
+++ b/app/views/admin/provider/new.html.erb
@@ -1,25 +1,35 @@
-<h3>Nouveau fournisseur</h3>
+<h2>Nouveau fournisseur</h2>
+<% if @provider.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@provider.errors.size, " erreur")%>, enregistrement echoué</h3>
+      <ul>
+        <% for message in @provider.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <%= form_tag :action=>'create' do%>
 
 <table>
 	<tr>
-		<td><label for="provider_names">Noms</label></td><td>: <%=text_field 'provider','names'%></td>
+		<td><label for="provider_names">Noms</label></td><td><%=text_field 'provider','names',:placeholder=>"Ex: MB-Télécom"%></td>
 	</tr>
 	
 	<tr>
 		<td><label for="provider_town">Ville</label></td>
-		<td>: <%=text_field 'provider', 'town'%></td>
+		<td><%=text_field 'provider', 'town',:placeholder=>"Ex: Beni"%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="provider_telephone">Téléphone</label></td><td>: <%=text_field 'provider','telephone'%></td>
+		<td><label for="provider_telephone">Téléphone</label></td><td><%=text_field 'provider','telephone',:placeholder=>"Ex: +243997843660"%></td>
 	</tr>
 	<tr>
-		<td><label for="provider_email">E-mail</label></td><td>: <%=text_field 'provider','email'%></td>
+		<td><label for="provider_email">E-mail</label></td><td><%=text_field 'provider','email',:placeholder=>"Ex: exemple@gmail.com"%></td>
 	</tr>
 	<tr>
-		<td><%=submit_tag "Ajouter"%></td>
+		<td></td><td><%=submit_tag "Ajouter", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', admin_provider_index_path(), class:'link'%>
