--- a/app/views/admin/provider/show.html.erb
+++ b/app/views/admin/provider/show.html.erb
@@ -1,16 +1,16 @@
-<h3>Modification du fournisseur: <i><%=@provider.names%></i></h3> 
+<h2>Fournisseur: <%=@provider.names%></h2> 
 
 <table>
 	<tr>
-		<td>Noms</td><td><b>: <%=@provider.names%></td></b>
+		<td>Noms</td><td><b><%=@provider.names%></td></b>
 	</tr>
 	<tr>
-		<td>Téléphone</td><td><b>: <%=@provider.telephone%></td></b>
+		<td>Téléphone</td><td><b><%=@provider.telephone%></td></b>
 	</tr>
 	<tr>
-		<td>E-mail</td><td><b>: <%=@provider.email%></td></b>
+		<td>E-mail</td><td><b><%=@provider.email%></td></b>
 	</tr>
 </table>
 
-<p><%=link_to 'Retour', :action=>'index'%>
-<%=link_to 'Modifier', :action=>'edit',:id=>@provider %></p>
+<p><%=link_to 'Retour', admin_provider_index_path(), class:'link'%>
+<%=link_to 'Modifier', admin_provider_edit_path(:id=>@provider), class:'editButton' %></p>
