--- a/app/views/admin/role/new.html.erb
+++ b/app/views/admin/role/new.html.erb
@@ -1,18 +1,29 @@
-<h1>Ajout de droit d'accès:</h1>
+<h2>Ajout de droit d'accès</h2>
 
 <%=form_tag :action=>'create' do%>
-
+<% if @role.errors.any? %>
+    <div class="error_messages" >
+      <h3><%=pluralize(@role.errors.size, " erreur")%>, enregistrement echoué</h3>
+      <ul>
+        <% for message in @role.errors.full_messages %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td>Titre       :</td>
-		<td><%=text_field 'role','title'%></td>
+		<td>Titre</td>
+		<td><%=text_field 'role','title',:placeholder=>"Ex: Root"%></td>
 	</tr>	
 	<tr>
-		<td>Description :</td>
-		<td><%=text_area 'role','description'%></td>
+		<td>Description</td>
+		<td><%=text_area 'role','description',:placeholder=>"Ex: Utilisateur ayant accès illimité"%></td>
+	</tr>
+	<tr>
+		<td></td><td><%=submit_tag 'Ajouter',class:'link'%></td>
 	</tr>	
 </table>
-
-<%=submit_tag 'Enregistrer'%>
 <%end%>
-<%=link_to 'Retour', {:action=>'list'}%>
+
+<%=link_to 'Retour', admin_role_list_path(),class:'link'%>
