--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,26 +1,36 @@
 
 <%=form_tag :action=>'create' do%>
+<% if @booking.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@booking.errors.size, " erreur")%>, enregistrement echoué</h3>
+		<ul>   	
+        <% for message in @booking.errors.full_messages %>
+        	<li><%= message %></li>
+        <% end %>
+     	 </ul>
+    </div>
+<% end %>
 <table>
-	<th>
-		<tr><td>RESERVER</td> </tr>
+	<thead>
+		<tr><td>Paneau de réservation</td> </tr>
 		<tr>
 			<td>Articles</td>
 			<td>Quantité</td>
-			
+			<td></td>
+			<td>Opération</td>
 		</tr>
+	</thead>
+	<th>
+		
 	</th>
 	<tbody>
 	<tr>
-		<td>
-			<%=collection_select(:booking, :item_id, @items, :id, :name, prompt: true)%></td>
-	
-		<td><%=text_field 'booking','quantity'%></td>
+		<td><%=collection_select(:booking, :item_id, @items, :id, :name, include_blank:"Selectionner article")%></td>
+		<td><%=text_field 'booking','quantity',:placeholder=>"Ex: 5"%></td>
 		<td><%=hidden_field 'booking','customer_id', :value=>@customer.id%></td>
-		<td><%=submit_tag 'Reserver'%></td>	
+		<td><%=submit_tag 'Reserver', class:'link'%></td>	
 	</tr>
-		
-		<%end%>
 	</tbody>
 </table>
 
-
+<%end%>
