--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,10 +1,79 @@
-<%=render '/bookings/bookings'%>
-<%=render '/bookings/new'%>
+<h2>Articles en stock et réservation</h2>
 <table>
 	<thead>
 		<tr>
 			
 			<td><b>Nom</b></td>
+			<td><b>Quantité</b></td>
+			<td>Opération</td>
+		</tr>
+	</thead>
+	<tbody>
+	<%if @reserves.nil?%>
+		<tr>
+			<td>
+				<%flash[:notice]="Selectionnez un article puis precisez la quantité à reserver."%>
+		<%else%>
+		<%@reserves.each do |rez|%>
+			</td>
+			
+		</tr>
+		
+		<tr>
+			
+			<td><%=rez.item.name%></td>
+			<td><%="#{rez.quantity} #{rez.item.unit.pluralize(rez.quantity)}"%></td>
+			<td><%=link_to 'Annuler',bookings_delete_path(:id=>rez.id), class:'deleteButton'%></td>
+	
+		</tr>
+		<%end%>
+			
+	<%end%>
+		
+	</tbody>
+</table>
+
+<%=form_tag :action=>'create' do%>
+<% if @booking.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@booking.errors.size, " erreur")%>, enregistrement echoué</h3>
+		<ul>   	
+        <% for message in @booking.errors.full_messages %>
+        	<li><%= message %></li>
+        <% end %>
+     	 </ul>
+    </div>
+<% end %>
+<table>
+	<thead>
+		<tr><td>Paneau de réservation</td> </tr>
+		<tr>
+			<td>Articles</td>
+			<td>Quantité</td>
+			<td></td>
+			<td>Opération</td>
+		</tr>
+	</thead>
+	<th>
+		
+	</th>
+	<tbody>
+	<tr>
+		<td><%=collection_select(:booking, :item_id, @items, :id, :name, include_blank:"Selectionner article")%></td>
+		<td><%=text_field 'booking','quantity',:placeholder=>"Ex: 5"%></td>
+		<td><%=hidden_field 'booking','customer_id', :value=>@customer.id%></td>
+		<td><%=submit_tag 'Reserver', class:'link'%></td>	
+	</tr>
+	</tbody>
+</table>
+
+<%end%>
+
+<table id="standard">
+	<thead>
+		<tr>
+			
+			<td><b>Article</b></td>
 			<td><b>Stock</b></td>
 		</tr>
 	</thead>
@@ -13,7 +82,7 @@
 				
 		<tr>
 			<td><%=article.name%></td>
-			<td><%=article.stock%></td>
+			<td><%="#{article.stock} #{article.unit.pluralize(article.stock)}"%></td>
 		</tr>
 		<%end%>
 	</tbody>
