--- a/app/views/operation/delivery/new.html.erb
+++ b/app/views/operation/delivery/new.html.erb
@@ -1,37 +1,45 @@
-<h3>Nouveau ravitailement</h3>
+<h2>Nouveau ravitailement</h2>
 <%=form_tag :action=>'create' do%>
-
+<% if @delivery.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@delivery.errors.size, "erreur")%>, enregistrement echoué</h3>
+      	<ul><% for message in @delivery.errors.full_messages %>
+          <li><%= message %></li>
+       	<% end %>
+      	</ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td><label for="deliv_item_name">Article :</label></td><td><%=collection_select(:delivery, :item_id, @items, :id, :name)%></td>
+		<td><label for="deliv_item_name">Article</label></td><td><%=collection_select(:delivery, :item_id, @items, :id, :name, include_blank:"Selectionner l'article")%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="deliv_quantity">Quantité :</label></td><td><%=text_field 'delivery','quantity'%></td>
+		<td><label for="deliv_quantity">Quantité</label></td><td><%=text_field 'delivery','quantity'%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="deliv_price_unit">Prix unitaire :</label></td><td><%=text_field 'delivery','price'%></td>
+		<td><label for="deliv_price_unit">Prix unitaire</label></td><td><%=text_field 'delivery','price'%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="deliv_provider">Fournisseur :</label></td><td><%=collection_select(:delivery, :provider_id, @providers, :id, :names)%></td>
+		<td><label for="deliv_provider">Fournisseur</label></td><td><%=collection_select(:delivery, :provider_id, @providers, :id, :names,include_blank:"Selectionner le fournisseur")%></td>
 	</tr>
 	<tr>
-		<td><label for="deliv_buyer">Acheteur :</label></td><td><%=collection_select(:delivery, :customer_id,@customers, :id,:names)%></td>
-	</tr>
-	
-	<tr>
-		<td><label for="deliv_ref">Référence :</label></td><td><%=text_field 'delivery','reference'%></td>
+		<td><label for="deliv_buyer">Acheteur</label></td><td><%=collection_select(:delivery, :customer_id,@customers, :id,:names,include_blank:"Selectionner l'acheteur")%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="deliv_date">Date :</label></td><td><%=date_select 'delivery','date'%></td>
+		<td><label for="deliv_ref">Référence</label></td><td><%=text_field 'delivery','reference'%></td>
 	</tr>
 	
 	<tr>
-		<td><%=submit_tag "Ajouter"%></td>
+		<td><label for="deliv_date">Date</label></td><td><%=date_field 'delivery','date'%></td>
+	</tr>
+	
+	<tr>
+		<td></td><td><%=submit_tag "Ajouter", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', operation_delivery_new_path(), class:'link'%>
