--- a/app/views/operation/order/edit.html.erb
+++ b/app/views/operation/order/edit.html.erb
@@ -1,26 +1,34 @@
-<h1>Révision de l'opération</h1>
+<h2>Révision de la transaction</h2>
 <%=form_for @order, :url=> {:action=>'update',:id=>@order} do |ord|%>
-
+<% if @order.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@order.errors.size, "erreur")%>, enregistrement echoué</h3>
+      	<ul><% for message in @order.errors.full_messages %>
+          <li><%= message %></li>
+       	<% end %>
+      	</ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td><label for="ord_item_name">Article :</label></td><td><%=collection_select(:order, :item_id, @items, :id, :name)%></td>
+		<td><label for="ord_item_name">Article</label></td><td><%=collection_select(:order, :item_id, @items, :id, :name)%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="ord_quantity">Quantité :</label></td><td><%=text_field 'order','quantity'%></td>
+		<td><label for="ord_quantity">Quantité</label></td><td><%=text_field 'order','quantity'%></td>
 	</tr> 
 	
 	<tr>
-		<td><label for="ord_price_unit">Demandeur :</label></td><td><%=collection_select(:order, :customer_id, @customers, :id, :names)%></td>
+		<td><label for="ord_price_unit">Demandeur</label></td><td><%=collection_select(:order, :customer_id, @customers, :id, :names)%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="ord_date">Date :</label></td><td><%=date_select 'order','date'%></td>
+		<td><label for="ord_date">Date</label></td><td><%=date_select 'order','date'%></td>
 	</tr>
 	
 	<tr>
-		<td><%=submit_tag "Enregistrer"%></td>
+		<td></td><td><%=submit_tag "Enregistrer", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', operation_order_index_path(), class:'link'%>
