--- a/app/views/operation/order/new.html.erb
+++ b/app/views/operation/order/new.html.erb
@@ -1,26 +1,36 @@
-<h3>Nouveau retrait</h3>
+<h2>Nouveau retrait</h2>
 <%=form_tag :action=>'create' do%>
-
+<% if @order.errors.any? %>
+    <div class="error_messages">
+      <h3><%=pluralize(@order.errors.size, "erreur")%>, enregistrement echoué</h3>
+      	<ul><% for message in @order.errors.full_messages %>
+          <li><%= message %></li>
+       	<% end %>
+      	</ul>
+    </div>
+  <% end %>
 <table>
 	<tr>
-		<td><label for="ord_item_name">Article :</label></td><td><%=collection_select(:order, :item_id, @items, :id, :name)%></td>
+		<td><label for="ord_item_name">Article</label></td><td><%=collection_select(:order, :item_id, @items, :id, :name, include_blank:"Sélectionner article")%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="ord_quantity">Quantité :</label></td><td><%=text_field 'order','quantity'%></td>
+		<td><label for="ord_quantity">Quantité</label></td><td><%=text_field 'order','quantity'%> <b>(unité de mesure)</b> </td>
 	</tr>
 	
 	<tr>
-		<td><label for="ord_price_unit">Demandeur :</label></td><td><%=collection_select(:order, :customer_id, @customers, :id, :names)%></td>
+		<td><label for="ord_price_unit">Demandeur</label></td><td><%=collection_select(:order, :customer_id, @customers, :id, :names, include_blank:"Sélectionner demandeur")%></td>
+	</tr>
+	<tr>
+		<td><label for="ord_price_unit">Expéditeur</label></td><td><%=collection_select(:order, :shipper, @customers, :id, :names, include_blank:"Sélectionner expéditeur")%></td>
+	</tr>	
+	<tr>
+		<td><label for="ord_customer">Date</label></td><td><%= date_select 'order','date'%></td>
 	</tr>
 	
 	<tr>
-		<td><label for="ord_customer">Date :</label></td><td><%=date_select 'order', 'date'%></td>
-	</tr>
-	
-	<tr>
-		<td><%=submit_tag "Ajouter"%></td>
+		<td></td><td><%=submit_tag "Ajouter", class:'link'%></td>
 	</tr>
 </table>
 <%end%>
-<%=link_to 'Retour', :action=>'index'%>
+<%=link_to 'Retour', operation_order_index_path(),class:'link'%>
