--- a/app/views/users/grant.html.erb
+++ b/app/views/users/grant.html.erb
@@ -1,11 +1,11 @@
-<h1>Liste d'utilisateurs</h1>
+<h2>Compte d'utilisateurs à valider</h2>
 <table>
 	<thead>
 		<tr>
 			<td>Nom d'utilisateur</td>
 			<td>Proprietaire</td>
 			<td>Niveau d'accès</td>
-			<td>Action</td>
+			<td>Operations</td>
 		</tr>
 		
 	</thead>
@@ -15,20 +15,19 @@
 			<td><%=u.username%></td>
 			<%if u.customer%>
 			<td><%=link_to u.customer.names,{:controller=>'admin/customer',:action=>:show,:id=>u.customer_id}%></td>
+			<%else%>
+			<td></td>
 			<%end%>
 		
 			<td><%if u.role%>
 			<%=u.role.title%>
 			<%end%></td>
-		
-		
-			<td><%=link_to 'Mot de passe',:action=>'edit', :id=>u%></td>
-			<td><%=link_to "Propriétaire/niveau d'accès",:action=>'access_edit', :id=>u%></td>
-		
+			<td><%=link_to 'Mot de passe',users_edit_path(:id=>u),class:'editButton'%>
+				<%=link_to "Propriétaire/niveau d'accès",users_access_edit_path(:id=>u),class:'editButton'%></td>
 		</tr>
 		
 	</tbody>
 	<%end%>
 	
 </table>
-<%=button_to "Retour"%>  
+<%=link_to "Retour", users_list_path(),class:'link'%>  
